[package]
name = "bunvivor"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.32.0"
bevy_egui = "0.35"
egui_dock = "0.16"
egui = "0.31"
leafwing-input-manager = "0.17.1"
rand = "0.9.1"
transform-gizmo-egui = "0.6"
bevy_math = { version = "0.16.1", features = ["mint"] }
bevy_rapier3d = { version = "0.30.0", features = ["debug-render-3d"] }
bevy_easings = "0.16.0"

[profile.dev]
opt-level = 0

[profile.dev.package.'*']
opt-level = 3
